--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 * {
-    background-color: #7f7e7d;
-    font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
+    background-color: #885a34;
+    font-family: Trebuchet MS, Helvetica Neue, Helvetica, sans-serif;
     margin: auto;
     width: 98%;
     padding: 6px;
@@ -15,6 +15,13 @@
     justify-content: center;
 }
 
+h1  {
+    font-size: 50px;
+    margin: auto;
+    padding-top: 0;
+    padding-bottom: 35px;
+}
+
 h3  {
     display: flex;
     justify-content: center;
@@ -23,21 +30,30 @@ h3  {
 p  {
     display: flex;
     justify-content: center;
+    font-style: italic;
+    margin-bottom: 35px;
 }
 
 h4  {
     display: flex;
     justify-content: center;
+    font-size: 20px;
+    margin: 30px auto;
 }
 
 h5  {
     font-size: medium;
     display: flex;
     justify-content: center;
+    font-size: 20px;
 }
 
 .link   {
     color: #a40303;
+}
+
+.link li {
+    margin: 12px;
 }
 
 a:link {
@@ -49,6 +65,7 @@ a:link {
 .image  {
     width: 550px;
     display: flex;
+    margin: auto auto 35px auto;
 }
 
 div.container {
@@ -57,9 +74,10 @@ div.container {
 
 ul.list {
     width: 500px;
-    display: inline-block;
+    display: block;
     text-align: center;
     list-style-position: inside;
+    padding-right: 70px;
 }
 
 ol.list {
@@ -67,4 +85,9 @@ ol.list {
     display: inline-block;
     text-align: center;
     list-style-position: inside;
+    padding-right: 70px;
+}
+
+.list li {
+    margin: 30px;
 }
